(env
 (release
  (flags (:standard -O3 -unbox-closures))))

(library
 (name zydis)
 (public_name zydis)
 (foreign_archives zydis-c)
 (foreign_stubs
  (language c)
  (names zydis_stubs)
  (include_dirs
    zydis-c/include
    zydis-c/dependencies/zycore/include
    config)
  (flags -O3 -march=native -g -fPIC)))

(data_only_dirs zydis-c)

(rule
 (deps (source_tree zydis-c))
 (targets libzydis-c.a)
 (action
  (no-infer
   (progn
    (chdir zydis-c
     (progn
      (run
        cmake -B build -S .
        -DCMAKE_C_FLAGS=-fPIC
        -DCMAKE_BUILD_TYPE=Release
        -DZYDIS_BUILD_EXAMPLES=OFF
        -DZYDIS_BUILD_TOOLS=OFF)
      (run cmake --build build)))
    (copy zydis-c/build/libZydis.a libzydis-c.a)))))

(rule
 (deps (source_tree zydis-c))
 (targets dllzydis-c.so)
 (action
  (no-infer
   (progn
    (chdir zydis-c
     (progn
      (run
        cmake -B build -S .
        -DCMAKE_C_FLAGS=-fPIC
        -DCMAKE_BUILD_TYPE=Release
        -DZYDIS_BUILD_SHARED_LIB=ON
        -DZYDIS_BUILD_EXAMPLES=OFF
        -DZYDIS_BUILD_TOOLS=OFF)
      (run cmake --build build)))
    (copy zydis-c/build/libZydis.so dllzydis-c.so)))))
